<resources>
    <string name="app_name">Game Backlog</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  Backlog screen  -->
    <string name="deleteIconString">deleteIconString</string>
    <!--  Add Game screen  -->
    <string name="Title">Title</string>
    <string name="Platform">Platform</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="addGameTitle">Add Game</string>
</resources>